@@ -70,6 +70,7 @@ usage()
 	printf("Commands:\n");
 	printf("  submit <ips>	submit a list of DHCP provided DNS servers,\n");
 	printf("		separated by spaces, these are then probed.\n");
+	printf("  unsafe	test option that pretends that dnssec fails\n");
 	printf("  results	continuous feed of probe results\n");
 	printf("  cmdtray	command channel for gui panel\n");
 	printf("Version %s\n", PACKAGE_VERSION);
