@@ -70,7 +70,7 @@ static FILE* open_rescf(struct cfg* cfg)
 		log_err("cannot open %s: %s", cfg->resolvconf, strerror(errno));
 		return NULL;
 	}
-	prline(out, "# Generated by " PACKAGE_STRING);
+	prline(out, "# Generated by " PACKAGE_STRING "\n");
 	if(cfg->rescf_domain) {
 		snprintf(line, sizeof(line), "domain %s\n", cfg->rescf_domain);
 		prline(out, line);
@@ -94,7 +94,10 @@ static void close_rescf(struct cfg* cfg, FILE* out)
 
 void hook_resolv_localhost(struct cfg* cfg)
 {
-	FILE* out = open_rescf(cfg);
+	FILE* out;
+	if(cfg->noaction)
+		return;
+	out = open_rescf(cfg);
 	if(!out) return;
 	/* write the nameserver records */
 	prline(out, "nameserver 127.0.0.1\n");
@@ -104,7 +107,10 @@ void hook_resolv_localhost(struct cfg* cfg)
 void hook_resolv_iplist(struct cfg* cfg, struct probe_ip* list)
 {
 	char line[1024];
-	FILE* out = open_rescf(cfg);
+	FILE* out;
+	if(cfg->noaction)
+		return;
+	out = open_rescf(cfg);
 	if(!out) return;
 	/* write the nameserver records */
 	while(list) {
